<resources>
    <string name="app_name">Qr Payment App</string>
    <string name="add_account">Add Account</string>
    <string name="flash_control">flash control</string>
    <string name="default_notification_channel_id">12321</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_account">Account</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_cashflow">Cash Flow</string>
    <string name="menu_about">About</string>
    <string name="confirm">Confirm</string>
    <string name="inquiry">Inquiry</string>
    <string name="confirmation">Confirmation</string>
    <string name="receipt">Receipt</string>
    <string name="transaction_status">Transaction %s</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>

    <string name="create_account">Create Account</string>
    <string name="account_owner_name">Owner Account</string>
    <string name="account_number">Account Number</string>
    <string name="initial_balance">Initial Balance</string>

    <string name="attention">Attention!</string>
    <string name="warning">Warning!</string>

    <string name="cancel_transaction">Cancel Transaction?</string>
    <string name="camera_require">Camera permission required, please grant permission to continue.</string>
    <string name="grant_permission">Please Grant Permission to continue</string>

    <string name="exit_title">Exit?</string>
    <string name="exit_desc">Are you sure to exit app?</string>

    <string name="payment_amount">Payment Amount</string>
    <string name="select_sof">Select Source of Fund</string>
    <string name="no_account">You have no account, please create account to continue</string>
    <string name="finish_challenge">Finish this challenge to continue</string>
    <string name="top_up_balance">Top-Up Account Balance</string>

    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_setting">Open Setting</string>
    <string name="permission_required">Permission Required</string>
    <string name="okay">Okay</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="action_continue">Continue</string>
    <string name="my_account">My Account</string>
    <string name="transaction_history">Transaction History</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="see_all_transaction">See All Transaction</string>
    <string name="no_record_to_show">No Record To Show</string>
    <string name="no_promo_to_show">No Promo To Show</string>
    <string name="promo">Promo</string>
    <string name="illustration">Illustration</string>
    <string name="remark_text">This application only used as example</string>
    <string name="used_library">External Used Library For This App</string>
</resources>